--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 <section class="hero is-small">
     <div class="hero-body">
         <div class="container">
-            <h2 class="title is-2" style="margin-bottom: 0;">Interactive Motion Modification</h2>
+            <h2 class="title is-2" style="margin-bottom: 0;">Interactive Motion Editing</h2>
             <div class="video-gallery-carousel-container">
                 <div class="video-gallery-carousel" id="gallery-carousel-long">
                     <div class="video-single active">
