--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                             <!-- Demo link -->
                             <span class="link-block">
-                                <a href="" class="external-link button is-normal is-rounded is-dark">
+                                <a href="https://huggingface.co/spaces/Yzy00518/motionReFit" class="external-link button is-normal is-rounded is-dark">
                                     <span class="icon"><i class="fa-solid fa-gamepad"></i></span>
                                     <span>Live Demo</span>
                                 </a>
