--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <!-- Affiliations -->
                         <span class="author-block">
                             <sup>1</sup>Institute for AI, Peking University &nbsp&nbsp 
-                            <sup>2</sup>State Key Lab of General Artificial Intelligence, BIGAI
+                            <sup>2</sup>State Key Laboratory of General Artificial Intelligence, BIGAI
                             <br>
                             <sup>3</sup>Yuanpei College, Peking University &nbsp&nbsp <sup>*</sup>Equal Contributions &nbsp&nbsp <sup>✉️</sup> Corresponding Authors
                         </span>
