--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 </section>
 
 
-<!-- teaser -->
+<!-- Teaser -->
 <section class="hero teaser">
     <div class="hero-body">
         <div class="container">
@@ -189,6 +189,21 @@
     </div>
 </section>
 <!--End interactive modification -->
+
+
+<!-- Youtube video -->
+<section class="hero is-small">
+    <div class="hero-body">
+        <div class="container">
+            <h2 class="title is-2" style="margin-bottom: 1rem;">Overview Video</h2>
+                <div class="publication-video">
+                    <iframe src="https://www.youtube.com/embed/p7HN1LVCRaQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+  </section>
+  <!-- End youtube video -->
 
 
 <!-- Body part replacement -->
@@ -397,17 +412,17 @@
 <!-- Dataset -->
 <section class="hero is-small">
     <div class="hero-body">
-          <div class="container">
-              <h2 class="title is-2" style="margin-bottom: 1rem;">The STANCE Dataset</h2>
-              <figure class="image" style="margin-bottom: 0;">
-                  <img src="static/images/dataset.png" alt="Research Poster">
-                  <figcaption class="mt-3">
-                    Sample sequences from our STANCE dataset. Our work introduces three complementary datasets: (a) a body part replacement dataset comprising 13,000 sequences from HumanML3D, annotated with an average of 2.1 body masks and corresponding motion descriptions; (b) a motion style transfer dataset containing 2 hours of new MoCap recordings that recreate HumanML3D sequences in various styles; and (c) a fine-grained motion adjustment dataset featuring 16,000 annotated triplets of generated motion pairs with their corresponding descriptions.
-                  </figcaption>
-              </figure>
-          </div>
+        <div class="container">
+            <h2 class="title is-2" style="margin-bottom: 1rem;">The STANCE Dataset</h2>
+            <figure class="image" style="margin-bottom: 0;">
+                <img src="static/images/dataset.png" alt="Research Poster">
+                <figcaption class="mt-3">
+                Sample sequences from our STANCE dataset. Our work introduces three complementary datasets: (a) a body part replacement dataset comprising 13,000 sequences from HumanML3D, annotated with an average of 2.1 body masks and corresponding motion descriptions; (b) a motion style transfer dataset containing 2 hours of new MoCap recordings that recreate HumanML3D sequences in various styles; and (c) a fine-grained motion adjustment dataset featuring 16,000 annotated triplets of generated motion pairs with their corresponding descriptions.
+                </figcaption>
+            </figure>
+        </div>
     </div>
-  </section>
+</section>
 <!--End Dataset -->
 
 
