--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             
                             <!-- Code link -->
                             <span class="link-block">
-                                <a href="" class="external-link button is-normal is-rounded is-dark">
+                                <a href="https://github.com/emptybulebox1/motionRefit/" class="external-link button is-normal is-rounded is-dark">
                                     <span class="icon"><i class="fab fa-github"></i></span>
                                     <span>Code</span>
                                 </a>
