--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
                         <div class="publication-links">
                             <!-- Arxiv PDF link -->
                             <span class="link-block">
-                                <a href="" class="external-link button is-normal is-rounded is-dark">
+                                <a href="https://arxiv.org/pdf/2503.20724" class="external-link button is-normal is-rounded is-dark">
                                     <span class="icon"><i class="fas fa-file-pdf"></i></span>
                                     <span>Paper</span>
                                 </a>
@@ -110,7 +110,7 @@
             
                             <!-- ArXiv Abstract Link -->
                             <span class="link-block">
-                                <a href="" class="external-link button is-normal is-rounded is-dark">
+                                <a href="https://arxiv.org/abs/2503.20724" class="external-link button is-normal is-rounded is-dark">
                                     <span class="icon"><i class="ai ai-arxiv"></i></span>
                                     <span>arXiv</span>
                                 </a>
