--- a/index.html
+++ b/index.html
@@ -429,21 +429,21 @@
 
 
 <!-- BibTex citation -->
- <!-- <section class="hero is-small">
+ <section class="hero is-small">
     <div class="hero-body">
         <div class="container">
             <h2 class="title is-2" style="margin-bottom: 1rem;">BibTex</h2>
             <figure class="image" style="margin-bottom: 0;">
-                <pre><code>@article{li2024zerohsi,
-  title={ZeroHSI: Zero-Shot 4D Human-Scene Interaction by Video Generation},
-  author={Li, Hongjie and Yu, Hong-Xing and Li, Jiaman and Wu, Jiajun},
-  journal={arXiv preprint arXiv:2412.18600},
-  year={2024}
+                <pre><code>@article{jiang2025dynamic,
+  title={Dynamic Motion Blending for Versatile Motion Editing},
+  author={Jiang, Nan and Li, Hongjie and Yuan, Ziye and He, Zimo and Chen, Yixin and Liu, Tengyu and Zhu, Yixin and Huang, Siyuan},
+  journal={arXiv preprint arXiv:2503.20724},
+  year={2025}
 }</code></pre>
             </figure>
         </div>
     </div>
-</section> -->
+</section>
 <!--End BibTex citation -->
 
 
